openshift-zero-downtime-deployments/flagsmith/deployment/flagsmith-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flagsmith
  namespace: zero-downtime-demo
  labels:
    app: flagsmith
    project: zero-downtime-deployments
spec:
  selector:
    app: flagsmith
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
